2008-10-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/SolutionFolder.cs: In GetBuildableEntries,
	include entries belonging to other solution folders, if
	includeExternalReferences is specified. Fixes bug 389127 - Solution
	doesn't build while all their projects build.

2008-10-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ResolveResult.cs: don't show members for
	"System.Void".

2008-10-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/IMethod.cs:
	* MonoDevelop.Projects.Dom/DomType.cs:
	* MonoDevelop.Projects.Dom/DomMethod.cs:
	* MonoDevelop.Projects.Dom/ResolveResult.cs: fixed 'Bug 431806 -
	Extension methods aren't shown in autocomplete'.

2008-10-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.addin.xml: updated netambience reference.

2008-10-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Output/AmbienceService.cs: moved ambience
	extension node to project model.

2008-10-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.addin.xml:
	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs: fixed 'Bug
	399737 - Code completion busted for referenced assemblies that are
	not in GAC, are outside of the solution, and which are referenced by
	other non-GAC outside referenced assemblies'.

2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs:
	* MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs: fixed 'Bug
	438139 - Refactory commands missing'.

2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomCecilCompilationUnit.cs: filtered more
	types.

2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomCecilType.cs:
	* MonoDevelop.Projects.Dom/DomCecilCompilationUnit.cs:
	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	fixed 'Bug 438699 - Code completion shows too many options'.

2008-10-27  Mike Krüger  <mkrueger@novell.com>
